--- a/WebXslt/src/main/webapp/WEB-INF/web.xml
+++ b/WebXslt/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
 	<servlet>
 		<servlet-name>MainServlet</servlet-name>
-		<servlet-class>com.github.rabid_fish.MainServlet</servlet-class>
+		<servlet-class>com.github.rabid_fish.web.MainServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
